# news-mcp

./: .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  config.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
architecture/: 001-architecture-design.md  002-architecture-design.md  003-architecture-design.md
scrapers/pcwatch/: __init__.py  browser.py
specs/: investment-research-mcp-server.md  operational-tools-and-rag.md  pcwatch-scraper.md
sprint/001-sprint/: sprint-overview.md
sprint/001-sprint/status/: 001-backend-data-models-status.md  002-backend-config-loader-status.md  003-infra-dependencies-status.md  004-backend-company-resolver-status.md  005-backend-mcp-tools-status.md  006-backend-server-entrypoint-status.md  007-testing-unit-tests-status.md  008-testing-integration-smoke-status.md
sprint/001-sprint/task/: 001-backend-data-models.md  002-backend-config-loader.md  003-infra-dependencies.md  004-backend-company-resolver.md  005-backend-mcp-tools.md  006-backend-server-entrypoint.md  (+2 more)
sprint/002-sprint/: sprint-overview.md
sprint/003-sprint/: sprint-overview.md
src/: __init__.py  config.py  embeddings.py  models.py  rag.py  resolver.py  scraper_base.py  scraper_loader.py  storage.py  tools.py  watchlist.py
structure/: 001-structure.md  002-structure.md  003-structure.md
tests/: test_config.py  test_embeddings.py  test_integration.py  test_main.py  test_models.py  test_rag.py  test_resolver.py  test_scraper_loader.py  test_storage.py  test_tools.py  test_watchlist.py
tests/test_scrapers/: test_pcwatch.py
(+63 files in other folders)
